--- a/openapi/rhose-api.yaml
+++ b/openapi/rhose-api.yaml
@@ -8,8 +8,13 @@ info:
     email: openbridge-dev@redhat.com
   license:
     name: Apache 2.0
-    url: https://www.apache.org/licenses/LICENSE-2.0.html
+    url: https://www.apache.org/licenses/LICENSE-2.0
   version: 0.0.1
+servers:
+- url: https://api.stage.openshift.com
+- url: http://localhost:8000
+- url: https://api.openshift.com
+- url: /
 tags:
 - name: Bridges
   description: "The API that allow the user to retrieve, create or delete Bridge instances."
@@ -983,6 +988,7 @@ components:
     Error:
       allOf:
       - $ref: '#/components/schemas/BaseResponse'
+      - $ref: '#/components/schemas/Error'
       - description: General error response
         type: object
         properties:
@@ -1008,6 +1014,15 @@ components:
         total:
           format: int64
           type: integer
+    ErrorsResponse:
+      type: object
+      properties:
+        kind:
+          type: string
+        items:
+          type: array
+          items:
+            $ref: '#/components/schemas/Error'
     ManagedResourceStatus:
       enum:
       - accepted
