Fix List missing schema

--- a/openapi/rhose-api.yaml
+++ b/openapi/rhose-api.yaml
@@ -841,17 +841,6 @@ components:
           minLength: 1
           type: string
           nullable: false
-    BaseResponse:
-      type: object
-      properties:
-        kind:
-          type: string
-        id:
-          type: string
-        name:
-          type: string
-        href:
-          type: string
     BridgeError:
       type: object
       properties:
@@ -987,10 +976,9 @@ components:
           type: boolean
     Error:
       allOf:
-      - $ref: '#/components/schemas/BaseResponse'
+      - $ref: '#/components/schemas/ObjectReference'
       - $ref: '#/components/schemas/Error'
-      - description: General error response
-        type: object
+      - type: object
         properties:
           code:
             type: string
@@ -1023,6 +1011,29 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/Error'
+    List:
+      allOf:
+      - $ref: '#/components/schemas/ListResponse'
+      - type: object
+        properties:
+          page:
+            format: int64
+            type: integer
+          size:
+            format: int64
+            type: integer
+          total:
+            format: int64
+            type: integer
+    ListResponse:
+      type: object
+      properties:
+        kind:
+          type: string
+        items:
+          type: array
+          items:
+            type: object
     ManagedResourceStatus:
       enum:
       - accepted
@@ -1034,6 +1045,17 @@ components:
       - deleted
       - failed
       type: string
+    ObjectReference:
+      type: object
+      properties:
+        kind:
+          type: string
+        id:
+          type: string
+        name:
+          type: string
+        href:
+          type: string
     ProcessorCatalogResponse:
       type: object
       properties:
