--- a/openapi/rhose-api.yaml
+++ b/openapi/rhose-api.yaml
@@ -975,15 +975,14 @@ components:
         enabled:
           type: boolean
     Error:
+      type: object
       allOf:
       - $ref: '#/components/schemas/ObjectReference'
-      - $ref: '#/components/schemas/Error'
-      - type: object
-        properties:
-          code:
-            type: string
-          reason:
-            type: string
+      properties:
+        code:
+          type: string
+        reason:
+          type: string
     ErrorListResponse:
       type: object
       properties:
